--- a/dfa/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
@@ -3,7 +3,7 @@
     <div class="col-8">
       <span class="page-heading">{{ dfaApplicationMainHeading }}</span>
     </div>
-    <div class="col-4" *ngIf="vieworedit !== 'view'" >
+    <div class="col-4" *ngIf="vieworedit !== 'view' && vieworedit !== 'edit'" >
       <button
         class="button-p save-button col-4"
         style="height:40px !important; vertical-align: middle; width:220px;"
@@ -18,7 +18,7 @@
         ></app-loader>
       </button>
     </div>
-    <div class="col-4" *ngIf="vieworedit === 'view'" >
+    <div class="col-4" *ngIf="vieworedit === 'view' || vieworedit === 'edit'" >
       <button
         class="button-p save-button col-4"
         style="height:40px !important; vertical-align: middle; width:220px;"
@@ -112,7 +112,7 @@
             type="button"
             (click)="dfaApplicationMainStepper.previous()"
           >
-            Go Back<span *ngIf="vieworedit !== 'view'"> & Edit</span>
+            Go Back<span *ngIf="vieworedit !== 'view' && vieworedit !== 'edit'"> & Edit</span>
           </button>
         </div>
         <div class="col-md-6">
@@ -147,7 +147,7 @@
             type="button"
             (click)="dfaApplicationMainStepper.previous()"
           >
-            Go Back<span *ngIf="vieworedit !== 'view'"> & Edit</span>
+            Go Back<span *ngIf="vieworedit !== 'view' && vieworedit !== 'edit'"> & Edit</span>
           </button>
           <button *ngIf="isSubmitted === true"
             class="button-s"
@@ -158,7 +158,7 @@
             Return to Dashboard
           </button>
         </div>
-        <div class="col-md-6" *ngIf="!isSubmitted && isSignaturesValid && (formCreationService.damagedPropertyAddressForm$ | async)?.valid && (formCreationService.propertyDamageForm$ | async)?.valid && (formCreationService.cleanUpLogForm$ | async)?.valid && (formCreationService.supportingDocumentsForm$ | async)?.valid && (formCreationService.otherContactsForm$ | async)?.valid && (formCreationService.fullTimeOccupantsForm$ | async)?.valid && vieworedit !== 'view'
+        <div class="col-md-6" *ngIf="!isSubmitted && isSignaturesValid && (formCreationService.damagedPropertyAddressForm$ | async)?.valid && (formCreationService.propertyDamageForm$ | async)?.valid && (formCreationService.cleanUpLogForm$ | async)?.valid && (formCreationService.supportingDocumentsForm$ | async)?.valid && (formCreationService.otherContactsForm$ | async)?.valid && (formCreationService.fullTimeOccupantsForm$ | async)?.valid && vieworedit !== 'view' && vieworedit !== 'edit'
              && isInsuranceTemplateUploaded
              && (isResidentialTenant ? (isIdentificationUploaded && isTenancyProofUploaded) : true)
 
@@ -175,7 +175,7 @@
         <div class="col-md-6" *ngIf="!isSubmitted && (!isSignaturesValid || !(formCreationService.damagedPropertyAddressForm$ | async)?.valid || !(formCreationService.propertyDamageForm$ | async)?.valid || !(formCreationService.cleanUpLogForm$ | async)?.valid || !(formCreationService.supportingDocumentsForm$ | async)?.valid || !(formCreationService.otherContactsForm$ | async)?.valid || !(formCreationService.fullTimeOccupantsForm$ | async)?.valid
              || !isInsuranceTemplateUploaded
              || !(isResidentialTenant ? (isIdentificationUploaded && isTenancyProofUploaded) : true)
-             ) && vieworedit !== 'view'">
+             ) && vieworedit !== 'view' && vieworedit !== 'edit'">
           <span style="color:red">Enter all required information and sign before submitting.</span>
         </div>
       </div>
