--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.html
@@ -47,14 +47,25 @@
         <button
           class="col-md-2 application-button"
           type="button"
+          *ngIf="applItem.primaryApplicantSignedDate"
           (click)="ViewApplication(applItem.applicationId, applItem.primaryApplicantSignedDate)"
         >
           View Application
         </button>
 
         <button
+        class="col-md-2 application-button"
+        type="button"
+        *ngIf="!applItem.primaryApplicantSignedDate"
+        (click)="ViewApplication(applItem.applicationId, applItem.primaryApplicantSignedDate)"
+        >
+          Complete Application
+        </button>
+
+        <button
           class="col-md-2 application-button whitebutton"
           type="button"
+          *ngIf="applItem.primaryApplicantSignedDate"
           (click)="EditApplication(applItem.applicationId, '3')"
         >
           Add to Clean Up Log
@@ -63,6 +74,7 @@
         <button
           class="col-md-2 application-button whitebutton"
           type="button"
+          *ngIf="applItem.primaryApplicantSignedDate"
           (click)="EditApplication(applItem.applicationId, '4')"
         >
           Add to Damaged Items
@@ -71,6 +83,7 @@
         <button
           class="col-md-2 application-button whitebutton"
           type="button"
+          *ngIf="applItem.primaryApplicantSignedDate"
           (click)="EditApplication(applItem.applicationId, '5')"
         >
           Add Supporting Docs
@@ -79,6 +92,7 @@
         <button
           class="col-md-2 application-button whitebutton"
           type="button"
+          *ngIf="applItem.primaryApplicantSignedDate"
           (click)="EditApplication(applItem.applicationId, '2')"
         >
           Add Other Contacts
