--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/occupants/occupants.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/occupants/occupants.component.html
@@ -68,7 +68,7 @@
 
               </table>
 
-              <div  *ngIf="fullTimeOccupantsDataSource.getValue().length > 0">
+              <div *ngIf="fullTimeOccupantsDataSource.getValue().length > 0">
                 <br /><br/>
               </div>
 
@@ -77,7 +77,7 @@
               </div>
 
               <button
-                *ngIf="!showFullTimeOccupantForm"
+                *ngIf="!showFullTimeOccupantForm && dfaApplicationMainDataService.getViewOrEdit() !== 'view' && dfaApplicationMainDataService.getViewOrEdit() !== 'edit'"
                 class="family-button"
                 mat-button
                 type="button"
@@ -279,12 +279,17 @@
 
               </table>
 
-              <div  *ngIf="secondaryApplicantsDataSource.getValue().length > 0">
+              <div *ngIf="secondaryApplicantsDataSource.getValue().length > 0">
+                <br /><br/>
+              </div>
+
+              <div *ngIf="secondaryApplicantsDataSource.getValue().length == 0 && (dfaApplicationMainDataService.getViewOrEdit() === 'view' || dfaApplicationMainDataService.getViewOrEdit() === 'edit')">
+                <b>No secondary applicants added.</b>
                 <br /><br/>
               </div>
 
               <button
-                *ngIf="!showSecondaryApplicantForm"
+                *ngIf="!showSecondaryApplicantForm && dfaApplicationMainDataService.getViewOrEdit() !== 'view' && dfaApplicationMainDataService.getViewOrEdit() !== 'edit'"
                 class="family-button"
                 mat-button
                 type="button"
