--- a/dfa/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
@@ -3,7 +3,7 @@
     <div class="col-8">
       <span class="page-heading">{{ dfaApplicationMainHeading }}</span>
     </div>
-    <div class="col-4" *ngIf="vieworedit !== 'view' && vieworedit !== 'edit'" >
+    <div class="col-4" *ngIf="vieworedit === 'add' || vieworedit === 'update'" >
       <button
         class="button-p save-button col-4"
         style="height:40px !important; vertical-align: middle; width:220px;"
@@ -18,7 +18,7 @@
         ></app-loader>
       </button>
     </div>
-    <div class="col-4" *ngIf="vieworedit === 'view' || vieworedit === 'edit'" >
+    <div class="col-4" *ngIf="vieworedit === 'view' || vieworedit === 'edit' || vieworedit === 'viewOnly'" >
       <button
         class="button-p save-button col-4"
         style="height:40px !important; vertical-align: middle; width:220px;"
@@ -52,7 +52,7 @@
       ></app-component-wrapper>
       <br />
       <div class="row justify-content-between resp-style">
-        <div class="col-md-6" *ngIf="vieworedit !== 'view' && vieworedit !== 'edit'">
+        <div class="col-md-6" *ngIf="vieworedit === 'add' || vieworedit === 'update'">
           <button
             class="button-s"
             [hidden]="step.component === 'damaged-property-address'"
@@ -63,7 +63,7 @@
             {{ step.backButtonLabel }}
           </button>
         </div>
-        <div class="col-md-6" *ngIf="vieworedit !== 'view' && vieworedit !== 'edit'">
+        <div class="col-md-6" *ngIf="vieworedit === 'add' || vieworedit === 'update'">
           <button
             *ngIf="
               currentFlow === 'verified-registration' &&
@@ -91,7 +91,7 @@
         submit the final signed version, all fields marked with a <b><span style="color:red;">*</span></b> must be completed.</label>
       </div>
     </mat-step>
-    <mat-step *ngIf="currentFlow === 'verified-registration' && vieworedit !== 'view' && vieworedit !== 'edit'">
+    <mat-step *ngIf="currentFlow === 'verified-registration' && (vieworedit === 'add' || vieworedit === 'update')">
       <ng-template matStepLabel>Review</ng-template>
       <app-review
         [type]="type"
@@ -112,7 +112,7 @@
             type="button"
             (click)="dfaApplicationMainStepper.previous()"
           >
-            Go Back<span *ngIf="vieworedit !== 'view' && vieworedit !== 'edit'"> & Edit</span>
+            Go Back<span *ngIf="vieworedit === 'add' || vieworedit === 'update'"> & Edit</span>
           </button>
         </div>
         <div class="col-md-6">
@@ -147,7 +147,7 @@
             type="button"
             (click)="dfaApplicationMainStepper.previous()"
           >
-            Go Back<span *ngIf="vieworedit !== 'view' && vieworedit !== 'edit'"> & Edit</span>
+            Go Back<span *ngIf="vieworedit === 'add' || vieworedit === 'update'"> & Edit</span>
           </button>
           <button *ngIf="isSubmitted === true"
             class="button-s"
@@ -165,7 +165,7 @@
              && (formCreationService.supportingDocumentsForm$ | async)?.valid
              && (formCreationService.otherContactsForm$ | async)?.valid
              && (formCreationService.fullTimeOccupantsForm$ | async)?.valid
-             && vieworedit !== 'view' && vieworedit !== 'edit'
+             && (vieworedit === 'add' || vieworedit === 'update')
              && requiredDocumentsSupplied()
              ">
           <button
@@ -187,7 +187,7 @@
                 || !(formCreationService.fullTimeOccupantsForm$ | async)?.valid
                 || !(this.requiredDocumentsSupplied())
                  )
-            && vieworedit !== 'view' && vieworedit !== 'edit'">
+            && (vieworedit === 'add' || vieworedit === 'update')">
           <span style="color:red">Enter all required information and sign before submitting.</span>
         </div>
       </div>
