--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/supporting-documents/supporting-documents.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/supporting-documents/supporting-documents.component.html
@@ -550,7 +550,7 @@
             mat-icon-button
             aria-label="Remove"
             (click)="confirmDeleteDocumentSummaryRow(element)"
-            *ngIf="dfaApplicationMainDataService.getViewOrEdit() !== 'view' && dfaApplicationMainDataService.getViewOrEdit() !== 'edit'"
+            *ngIf="dfaApplicationMainDataService.getViewOrEdit() === 'add' || dfaApplicationMainDataService.getViewOrEdit() === 'update'"
           >
             <img src="/assets/images/delete.svg" height="35" width="35" />
             <img src="/assets/images/delete_onhover.svg" height="35" width="35"/>
